--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
         <div class="cards">
             <h2>Что-то интересное</h2>
             <ul class="link-style">
+                <div class="music">
+                    <div class="form-group">
                 <li><a href="https://www.youtube.com/watch?v=e_atyw0IDqg&list=RDe_atyw0IDqg&start_radio=1"  target="_blank" >Немного нового Miagy!</a></li>
+                    </div>
+                <div class="form-group">
+                <audio controls>
+                    <source src="/Miyagi_JEndshpil_-_Silhouette_74896642.mp3" type="audio/mp3">
+                </audio>
+               </div>
+                </div>
                 <li><a href="https://www.youtube.com/watch?v=-CB7Vr-lkAI" target="_blank">Немного старого Miagy!</a></li>
             </ul>
             
