--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
  </head>
  <body >
     <div class="container">
+        <div class="navbar">
+          <ul class="navlist">
+            <li>услуги</li>
+            <li>каталог</li>
+            <li>интересная информация</li>
+            <li>подпишись</li>
+          </ul>  
+        </div>
         <div class="info">
             <img src="art.png"  class="avatar"/>
             <div class="info-text">
@@ -106,5 +114,7 @@
 
  
 
+<script src="js.js">
     
+</script>
  </body>
